# chattermouth

./: .gitignore  README.md  cli.html  core.html  index.html  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  release.yaml
chattermouth/: __init__.py  cli.py  core.py
chattermouth/nlp/: __init__.py  categories.py  training.py
chattermouth/slack/: __init__.py
examples/: cli.py  cli_example.py  slack_example.py
nlp/: categories.html  index.html  training.html
slack/: index.html
